docs: 全库 8 大模块第二轮深度优化丰富（只追加/润色，零删除）
覆盖 场景设计(11)/基础知识核心(14)/时序库(7)/大模型(29)/源码系列(7)/算法(5)/DDD/云原生/设计模式：继续大幅追加代码示例、Mermaid 图、对比表、生产踩坑与容量估算、面试高频。根 README 补充更新记录。所有原内容零删改。